[package]
name = "discord-help-bot"
authors = ["Mohan Chimata <mohanchimata16@gmail.com>"]
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11" }
